<resources>
    <string name="app_name">NotesApp</string>
    <string name="app_preferences_key">NotesAppSharedPreferencesKey</string>
    <string name="logged_user_id">LoggedUserId</string>
    <string name="logged_user_name">LoggedUserName</string>
    <string name="logged_user_role">LoggedUserRole</string>

    <!-- USERS -->
    <string name="user_label">User</string>
    <string name="password_label">Password</string>
    <string name="user_hint">Email...</string>
    <string name="error_label">Error</string>
    <string name="login_icon_desc">Green pencil</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="save_user_button_text">Save</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Name, nick...</string>
    <string name="password_content_desc">Enter a secret password</string>
    <string name="role_label">Role:</string>
    <string name="admin_icon_desc">Admin user icon</string>
    <string name="user_management_title">User Management</string>
    <string name="register_user_title_text">Register User</string>
    <string name="new_user_title_text">New User</string>
    <string name="edit_user_title_text">Edit User</string>

    <!-- Validation messages -->
    <string name="user_not_found">User not found</string>
    <string name="credential_fail">Invalid password</string>
    <string name="username_not_blank">Username cannot be empty</string>
    <string name="invalid_user">Invalid user or empty</string>
    <string name="invalid_email">Not a valid email address"</string>
    <string name="user_exists">User already exists</string>
    <string name="password_not_blank">Password cannot be empty</string>
    <string name="invalid_password">Password should has at least 8 characters</string>


    <!-- NOTES -->
    <string name="username_title_text">%1$s\'s Notes</string>
    <string name="new_note_title_text">Create a new Note</string>
    <string name="edit_note_title_text">Edit Note</string>
    <string name="note_title_label">Title</string>

    <!-- Validation messages -->
    <string name="note_title_not_blank">Note\'s title should not be blank</string>
    <string name="note_content_not_blank">Note\'s content should not be blank</string>
    <string name="note_already_exists">A note with that title already exists</string>


    <!-- Menu options -->
    <string name="profile_action_title">Profile</string>
    <string name="logout_action_title">Logout</string>
    <string name="users_management_menu_title">Users</string>
    <string name="notes_management_menu_title">Notes</string>
    <string name="delete_user_button_text">DELETE</string>

</resources>
