<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userViewModel"
            type="es.dani.nomore.notesapp.model.viewmodels.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.LoginFragment">

        <TextView
            android:id="@+id/login_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@={userViewModel.validationError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            android:visibility="gone"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="92dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/login_icon_desc"
            android:src="@drawable/ic_write"
            app:layout_constraintBottom_toTopOf="@+id/user_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/user_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_label"
            app:layout_constraintBottom_toTopOf="@+id/user_edit_text"
            app:layout_constraintEnd_toEndOf="@id/user_edit_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/user_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/logo_image_view" />

        <EditText
            android:id="@+id/user_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/user_hint"
            android:inputType="textEmailAddress"
            android:text="@={userViewModel.currentUser.email}"
            app:layout_constraintBottom_toTopOf="@+id/password_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_text_view" />

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
            app:layout_constraintEnd_toEndOf="@id/password_edit_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/user_edit_text" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={userViewModel.currentUser.password}"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_view" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
            app:layout_constraintStart_toEndOf="@+id/login_button" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/login_button_text"
            android:onClick="@{() -> userViewModel.checkLogin()}"
            app:layout_constraintBottom_toTopOf="@+id/login_error_text"
            app:layout_constraintEnd_toStartOf="@+id/register_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
